# maplestory-wasm-1

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
docs/superpowers/plans/: 2026-06-14-frontend-redesign-phase0.md  2026-06-14-frontend-redesign-phase1-hud.md  2026-06-14-frontend-redesign-phase2-entry.md  2026-06-14-frontend-redesign-phase3-windows.md  2026-06-14-frontend-redesign-phase4-dialogs.md  2026-06-14-frontend-redesign-phase5-polish.md
docs/superpowers/specs/: 2026-06-14-frontend-redesign-design.md
scripts/: build_ui.sh
src/client/: CMakeLists.txt  Journey.cpp
src/client/Character/: SkillBook.cpp  SkillBook.h
src/client/Graphics/: GraphicsGL.cpp  GraphicsGL.h  Texture.cpp  Texture.h
src/client/IO/: UI.cpp  UI.h  UIStateGame.cpp  UIStateLogin.cpp  UiBridge.cpp  UiBridge.h  UiBridgeProtocol.h  Window.cpp  Window.h
src/client/IO/UITypes/: UIBuffList.cpp  UIBuffList.h  UICharSelect.cpp  UICharSelect.h  UIChatBar.cpp  UIEquipInventory.cpp  UIItemInventory.cpp  UILogin.cpp  UINpcTalk.cpp  UINpcTalk.h  UIShop.cpp  UIShop.h  UISkillBook.cpp  UIStatsInfo.cpp  UIStatusBar.cpp  UIStatusBar.h  UIWorldSelect.cpp
src/client/LazyFS/: lazyfs.js
src/client/Net/: InPacket.cpp  InPacket.h  OutPacket.h  PacketSwitch.cpp
src/client/Net/Handlers/: LoginHandlers.cpp  MessagingHandlers.cpp  NpcInteractionHandlers.cpp
src/client/Net/Packets/: MessagingPackets.h
web/: assets_server.py  hd_assets.js  index.html  server.py  server_fast.py  ws_proxy.py
web/hd/: gen_assets.py  manifest.json
web/ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
web/ui/e2e/: dialogs.spec.ts  entry.spec.ts  hud.spec.ts  roundtrip.spec.ts  smoke.spec.ts  windows.spec.ts
web/ui/scripts/: gen-cpp-protocol.mjs
web/ui/src/: main.tsx
web/ui/src/app/: App.css  App.tsx
web/ui/src/bridge/: MapleBridge.test.ts  MapleBridge.ts  assets.ts  protocol.spec.json  protocol.ts  useBridge.ts
web/ui/src/design/: AssetImage.tsx  Tooltip.test.tsx  Tooltip.tsx  Window.test.tsx  Window.tsx  primitives.test.tsx  primitives.tsx  tokens.css
web/ui/src/features/buffs/: BuffBar.test.tsx  BuffBar.tsx
web/ui/src/features/charselect/: CharSelect.test.tsx  CharSelect.tsx
web/ui/src/features/entry/: EntryBackdrop.tsx  entry.css
web/ui/src/features/equipment/: EquipmentWindow.test.tsx  EquipmentWindow.tsx
web/ui/src/features/hud/: Chat.tsx  Hud.tsx  StatusBar.tsx  hud.css  useHudHotkeys.ts
web/ui/src/features/inventory/: InventoryWindow.test.tsx  InventoryWindow.tsx
web/ui/src/features/login/: Login.test.tsx  Login.tsx
web/ui/src/features/notifications/: Toasts.test.tsx  Toasts.tsx  toasts.css
web/ui/src/features/npc/: NpcDialog.test.tsx  NpcDialog.tsx
web/ui/src/features/shop/: Shop.test.tsx  Shop.tsx
web/ui/src/features/skills/: SkillsWindow.test.tsx  SkillsWindow.tsx
web/ui/src/features/stats/: StatsWindow.test.tsx  StatsWindow.tsx
web/ui/src/features/system/: Disconnected.tsx  FpsMeter.tsx  Settings.tsx  SystemMenu.tsx  disconnected.css
web/ui/src/features/worldselect/: WorldSelect.tsx
web/ui/src/store/: store.test.ts  store.ts
